[package]
name = "patchr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1.0.56"
patch = "0.6.0"
walkdir = "2.3.2"
colored = "2.0.0"
regex = "1.5.5"